User Hook UseParams

--- a/public/index.html
+++ b/public/index.html
@@ -308,6 +308,11 @@
         </RouterContext.Consumer>
     }
 
+    function useParams () {
+        const router = React.useContext(RouterContext)
+        return router.match.groups
+    }
+
     // ##########################
 
     function App () {
@@ -407,10 +412,10 @@
     }
 
     function LotPage () {
-        const router = React.useContext(RouterContext)
+        const params = useParams()
         return (
             <Page>
-                <h1>Lot #{router.match.groups.id}</h1>
+                <h1>Lot #{params.id}</h1>
                 <p>Lot description</p>
             </Page>
         )
