--- a/public/index.html
+++ b/public/index.html
@@ -478,8 +478,15 @@
         return <div className="loading">Loading...</div>
     }
 
-    function AlertError ({ message }) {
-        return <div className="error">{message}</div>
+    function AlertError ({ message, retry }) {
+        return (
+        <div className="error">
+            <span>{message}</span>
+            {retry ? (
+                <ion-icon name="reload-circle" onClick={retry} />
+            ) : null}
+        </div>
+        )
     }
 
     function LotsContainer ({ lots, loading, loaded, error, load }) {
@@ -490,7 +497,7 @@
         }, [loaded, loading, error])
 
         if (error !== null) {
-            return <AlertError message={error} />
+            return <AlertError message={error} retry={load} />
         }
 
         if (loading) {
