--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
                             } else {
                                 reject(new Error('Connection error'))
                             }
-                        }, 1000)
+                        }, 200)
                     })
                 default:
                     throw new Error('Unknown address')
@@ -95,6 +95,7 @@
         error: null
     }
 
+    const LOTS_CLEAR = 'LOTS_CLEAR'
     const LOTS_LOADING_PENDING = 'LOTS_LOADING_PENDING'
     const LOTS_LOADING_SUCCESS = 'LOTS_LOADING_SUCCESS'
     const LOTS_LOADING_ERROR = 'LOTS_LOADING_ERROR'
@@ -104,6 +105,14 @@
 
     function auctionReducer (state = auctionInitialState, action) {
         switch (action.type) {
+            case LOTS_CLEAR:
+                return {
+                    ...state,
+                    lots: [],
+                    loading: false,
+                    loaded: false,
+                    error: null
+                }
             case LOTS_LOADING_PENDING:
                 return {
                     ...state,
@@ -169,6 +178,12 @@
                 }
             default:
                 return state
+        }
+    }
+
+    function lotsClear () {
+        return {
+            type: LOTS_CLEAR
         }
     }
 
@@ -480,21 +495,27 @@
 
     function AlertError ({ message, retry }) {
         return (
-        <div className="error">
-            <span>{message}</span>
-            {retry ? (
-                <ion-icon name="reload-circle" onClick={retry} />
-            ) : null}
-        </div>
+            <div className="error">
+                <span>{message}</span>
+                {retry ? (
+                    <ion-icon name="reload-circle" onClick={retry} />
+                ) : null}
+            </div>
         )
     }
 
-    function LotsContainer ({ lots, loading, loaded, error, load }) {
+    function LotsContainer ({ lots, loading, loaded, error, load, unload }) {
         React.useEffect(() => {
             if (!loaded && !loading && error === null) {
                 load()
             }
         }, [loaded, loading, error])
+
+        React.useEffect(() => {
+            if (loaded || error !== null) {
+                return unload
+            }
+        }, [loaded, error])
 
         if (error !== null) {
             return <AlertError message={error} retry={load} />
@@ -519,7 +540,8 @@
     })
 
     const lotsContainerMapDispatchToProps = {
-        load: loadLotsAsync
+        load: loadLotsAsync,
+        unload: lotsClear
     }
 
     const LotsContainerConnected = ReactRedux.connect(
