--- a/public/index.html
+++ b/public/index.html
@@ -274,7 +274,7 @@
 
     // ##########################
 
-    const { BrowserRouter, Switch, Route, Link, useParams } = ReactRouterDOM
+    const { BrowserRouter, Switch, Route, Link, NavLink, useParams } = ReactRouterDOM
 
     // ##########################
 
@@ -306,9 +306,9 @@
         return (
             <nav>
                 <ul>
-                    <li><Link to="/">Home</Link></li>
-                    <li><Link to="/lots">Lots</Link></li>
-                    <li><Link to="/help">Help</Link></li>
+                    <li><NavLink to="/" exact>Home</NavLink></li>
+                    <li><NavLink to="/lots">Lots</NavLink></li>
+                    <li><NavLink to="/help" exact>Help</NavLink></li>
                 </ul>
             </nav>
         )
@@ -559,7 +559,6 @@
     )
 
     // ##########################
-
 </script>
 
 </body>
